--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.platform=postgres
 spring.jpa.show-sql=true 
 spring.jpa.hibernate.ddl-auto=create-drop 
 spring.database.driverClassName=org.postgresql.Driver 
-spring.datasource.url=jdbc:postgresql://kcp.cds7zrp4tdty.us-east-1.rds.amazonaws.com:5432/kcp
-spring.datasource.username=kiran
-spring.datasource.password=kiran123
+spring.datasource.url=jdbc:postgresql://localhost:32768/postgres
+spring.datasource.username=postgres
+spring.datasource.password=kiran
 server.port=8080
